fix: smaller font size on mobile

--- a/app/components/Heading/index.module.css
+++ b/app/components/Heading/index.module.css
@@ -4,4 +4,5 @@
 
 .title {
   margin-bottom: var(--space-md);
+  line-height: 1.2;
 }
